        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=10818
        String::append does 2 full copies instead of 1 (or zero!)

        No change in functionality, thus no test.

        * platform/String.cpp:
        (WebCore::String::append): Rewrote to copy once. Also removed an ancient
        FIXME that doesn't seem to make any sense. Note that append() behavior doesn't
        match documented String behavior ("modifications to one instance will
        also modify all others"), but there are a lot of methods that don't.



Canonical link: https://commits.webkit.org/21221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27300 268f45cc-cd09-0410-ab3c-d52691b4dbfc